# netinfer

./: .gitignore  CITATION.cff  README.md  copilot-instructions.md  environment.yaml  netinfer.yml  pyproject.toml  setup.py
config/: config.yaml
example/: example_command.txt
example/example_input/: metadata.tsv  otu_table.tsv  taxonomy_table.tsv
example/example_output/: config.yaml
example/example_output/final_results/: merged_edges-mytest.tsv  merged_network-mytest.gexf  merged_network-mytest.gml  merged_nodes-mytest.tsv  netinfer_dashboard-mytest.html  network_info-mytest.json  network_stats-mytest.txt
example/example_output/preprocessed_data/: abundance_stats.tsv  filtered_abundance.tsv
netinfer/: __init__.py  cli.py
netinfer/config/: config.yaml
netinfer/workflow/: Snakefile
netinfer/workflow/envs/: fastspar.yaml  r.yaml
netinfer/workflow/rules/: aggregation.smk  flashweave.smk  flashweaveHE.smk  jaccard.smk  pearson.smk  propr.smk  spearman.smk  spieceasi.smk  visualization.smk
netinfer/workflow/scripts/: generate_html.py  (+8 more)
workflow/: Snakefile
workflow/envs/: julia.yaml  python.yaml
workflow/rules/: aggregation.smk  fastspar.smk  flashweave.smk  flashweaveHE.smk  jaccard.smk  preprocessing.smk  propr.smk  spearman.smk  spieceasi.smk  visualization.smk
workflow/scripts/: aggregate_networks.py  generate_html.py  infer_taxonomy.py  install_flashweave.jl  network-Spearman.R  preprocess_abundance.py  preprocess_taxonomy.py  process_fastspar.py  run_flashweave.jl  run_jaccard.py  run_propr.R  run_spearman.R  run_spearman.py  run_spieceasi.R
(+22 files in other folders)
